hphp/test/zend/good/Zend/tests/add_004.php.expectf

Fatal error: Uncaught exception 'InvalidOperationException' with message 'Invalid operand type was used: cannot perform this operation with arrays' in %s/add_004.php:5
Stack trace:
%A
